devops/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plan
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: staging.indrz.com
    http:
      paths:
      - backend:
          service:
            name: indrz-nginx
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
